--- a/Practice03/Practice03/Practice03.vcxproj.filters
+++ b/Practice03/Practice03/Practice03.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="practice03_4.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="practice03_5.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="practice03_6.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="practice03_7.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
