--- a/Lecture50/Lecture50/Lecture50.vcxproj
+++ b/Lecture50/Lecture50/Lecture50.vcxproj
@@ -142,7 +142,10 @@
     <ClCompile Include="ex50_1.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="ex50_2.cpp" />
+    <ClCompile Include="ex50_2.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="ex50_3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
