--- a/Lecture50/Lecture50/Lecture50.vcxproj.filters
+++ b/Lecture50/Lecture50/Lecture50.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="ex50_2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ex50_3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
