--- a/Practice07/Practice07/Practice07.vcxproj.filters
+++ b/Practice07/Practice07/Practice07.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="practice07_2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="practice07_3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
